package ucf.todoapp;

import javafx.application.Application;
import javafx.event.ActionEvent;
import javafx.fxml.FXML;
/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Ryan Persad
 */
import javafx.fxml.FXMLLoader;
import javafx.fxml.Initializable;
import javafx.scene.Scene;
import javafx.scene.control.Label;
import javafx.scene.layout.AnchorPane;
import javafx.stage.Stage;
import javafx.scene.Parent;

import java.io.IOException;


public class HelloController  {
    @FXML
    private AnchorPane root;

    @FXML
    protected void onShowbuttonClick(Stage stage, ActionEvent event) throws IOException {

    }
     @FXML
     public void pressButton(ActionEvent event) throws Exception {

     }


}