@startuml
'https://plantuml.com/class-diagram

class HelloApplication {
+start()
+main()
+stop()
+init()

}

class HelloController{
 private List<GetData> todoItems;

    @FXML
    private ListView<GetData> todoListView;

    @FXML
    private TextArea itemDetailsTextArea;

    @FXML
    private Label deadlineLabel;

    @FXML
    private BorderPane mainBorderPane;

    @FXML
    private ContextMenu listContextMenu;

    @FXML
    private ToggleButton filterToggleButton;

    private FilteredList<GetData> filteredList;

    private Predicate<GetData> wantAllItems;
    private Predicate<GetData> wantTodaysItems;
    +initialize()
    +Changed()
    +Test()
    +Compare()
    +UpdateItem()
    +ShowNewItemDialogue()
    +handleClickListView()
    +deleteItem(TodoItem item)
    +handleFilterButton()
    +handleExit()

}
class TodoList{
+getInstance()
+TodoList()
+TodoList()
+addData(GetData item)
+loadTheData()
+storeTodoItems()
+deleteData(GetData item)




}
class GetData{
private String shortDescription
private String details
private LocalDate deadline

+GetData(String shortDescription, String details, LocalDate deadline)
+getShortDescription()
+setShortDescription(String shortDescription)
+getDetails()
+setDetails(String details)
+getDeadline()
+setDeadline(LocalDate deadline)

}

TodoList<--GetData
HelloController<--GetData
HelloController<--TodoList
HelloApplication<--HelloController
@enduml